# droppy

./: pyproject.toml  temp.py
droppy/droppy/: edgedetection.py  imageanalysis.py
images/: results_a.jpg.csv  results_test.jpg.csv
