[project]
name = "honzina"
version = "0.1.0"
description = ""
authors = [
    {name = "Vojtěch Riedl",email = "vojtechriedl@portabo.cz"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "joblib (>=1.5.1,<2.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "scikit-image (>=0.25.2,<0.26.0)",
    "numba (>=0.61.2,<0.62.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
